--- a/client/package.json
+++ b/client/package.json
@@ -25,5 +25,9 @@
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@nestjs/mongoose": "^7.2.4",
+    "mongoose": "^5.12.5"
   }
 }
